--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,28 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <com.facebook.widget.LoginButton
-        android:id="@+id/authButton"
+    <fragment
+        android:name="com.aadisriram.quicktact.fragments.FacebookFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
-        />
+        android:id="@+id/facebook_fragment"
+        android:layout_marginTop="10dp" />
+
+    <fragment
+        android:name="com.aadisriram.quicktact.fragments.TwitterFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/twitter_fragment"
+        android:layout_marginTop="10dp" />
+
+    <fragment
+        android:name="com.aadisriram.quicktact.fragments.GooglePlusFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/google_plus_fragment"
+        android:layout_marginTop="10dp" />
 
 </LinearLayout>
